// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render view returned from ViewRegistry 1`] = `
<h1>
  Test
</h1>
`;

exports[`Render view returned from ViewRegistry with passed router 1`] = `
<h1>
  Test attribute
</h1>
`;

exports[`Render view with parents should nest rendered views 1`] = `
<div>
  <h1>
    App
  </h1>
  <div>
    <h2>
      Form
    </h2>
    <div>
      <h3>
        Form Tab
      </h3>
    </div>
  </div>
</div>
`;
